--- a/notebooks/learning-to-rank/01-learning-to-rank.ipynb
+++ b/notebooks/learning-to-rank/01-learning-to-rank.ipynb
@@ -22,16 +22,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "59423.67s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -39,20 +32,20 @@
       "Requirement already satisfied: elasticsearch in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (8.11.1)\n",
       "Requirement already satisfied: eland[xgboost] in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (8.11.1)\n",
       "Requirement already satisfied: elastic-transport<9,>=8 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from elasticsearch) (8.11.0)\n",
-      "Requirement already satisfied: packaging in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (23.2)\n",
-      "Requirement already satisfied: matplotlib>=3.6 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (3.7.4)\n",
       "Requirement already satisfied: numpy<2,>=1.2.0 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (1.24.4)\n",
       "Requirement already satisfied: pandas<2,>=1.5 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (1.5.3)\n",
+      "Requirement already satisfied: matplotlib>=3.6 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (3.7.4)\n",
+      "Requirement already satisfied: packaging in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (23.2)\n",
       "Requirement already satisfied: xgboost<2,>=0.90 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from eland[xgboost]) (1.7.6)\n",
       "Requirement already satisfied: certifi in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from elastic-transport<9,>=8->elasticsearch) (2023.11.17)\n",
       "Requirement already satisfied: urllib3<3,>=1.26.2 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from elastic-transport<9,>=8->elasticsearch) (2.1.0)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (2.8.2)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (6.1.1)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (1.1.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (10.2.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (1.4.5)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (3.1.1)\n",
       "Requirement already satisfied: fonttools>=4.22.0 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (4.47.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (3.1.1)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (6.1.1)\n",
+      "Requirement already satisfied: pillow>=6.2.0 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (10.2.0)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (1.1.1)\n",
+      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (1.4.5)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (2.8.2)\n",
       "Requirement already satisfied: cycler>=0.10 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from matplotlib>=3.6->eland[xgboost]) (0.12.1)\n",
       "Requirement already satisfied: pytz>=2020.1 in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from pandas<2,>=1.5->eland[xgboost]) (2023.3.post1)\n",
       "Requirement already satisfied: scipy in /Users/afoucret/git/elasticsearch-labs/.venv/lib/python3.8/site-packages (from xgboost<2,>=0.90->eland[xgboost]) (1.10.1)\n",
@@ -79,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +81,7 @@
        "'Successfully connected to cluster 2a391d1ee27d46078c34e6d04a30c384 (version 8.12.0)'"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,50 +128,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "DATASET_BASE_URL = \"https://raw.githubusercontent.com/afoucret/elasticsearch-labs/ltr-notebook/notebooks/learning-to-rank/sample_data/\"\n",
+    "\n",
+    "CORPUS_URL = urljoin(DATASET_BASE_URL, \"movies_corpus.jsonl.gz\")\n",
+    "JUDGEMENTS_FILE_URL = urljoin(DATASET_BASE_URL,\"movies_judgments.csv.gz\")\n",
+    "INDEX_SETTINGS_URL = urljoin(DATASET_BASE_URL,\"movies_index_settings.json\")\n",
+    "FEATURE_EXTRACTORS_URL = urljoin(DATASET_BASE_URL,\"movies_feature_extractors.json\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Importing the document corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skip downloading movies_corpus.jsonl.gz as it already exists into /Users/afoucret/git/elasticsearch-labs/notebooks/learning-to-rank/sample_data\n",
-      "[OK]\n",
-      "Skip downloading movies_judgments.csv.gz as it already exists into /Users/afoucret/git/elasticsearch-labs/notebooks/learning-to-rank/sample_data\n",
-      "[OK]\n",
-      "Skip downloading movies_index_settings.json as it already exists into /Users/afoucret/git/elasticsearch-labs/notebooks/learning-to-rank/sample_data\n",
-      "[OK]\n",
-      "Skip downloading movies_feature_extractors.json as it already exists into /Users/afoucret/git/elasticsearch-labs/notebooks/learning-to-rank/sample_data\n",
-      "[OK]\n"
+      "Deleting index if it already exists: movies\n",
+      "Creating index: movies\n",
+      "Loading the corpus from https://raw.githubusercontent.com/afoucret/elasticsearch-labs/ltr-notebook/notebooks/learning-to-rank/sample_data/movies_corpus.jsonl.gz\n",
+      "Indexing the corpus into movies ...\n",
+      "Indexed 9751 documents into movies\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "from urllib.request import urljoin, urlretrieve\n",
+    "import json\n",
+    "import elasticsearch.helpers as es_helpers\n",
+    "import pandas as pd\n",
+    "from urllib.request import urlopen\n",
     "\n",
-    "DATASET_DIR = os.path.join(os.getcwd(), \"sample_data\")\n",
+    "MOVIE_INDEX = \"movies\"\n",
     "\n",
-    "DATASET_BASE_URL = \"https://raw.githubusercontent.com/afoucret/elasticsearch-labs/ltr-notebook/notebooks/learning-to-rank/sample_data/\"\n",
-    "DOCUMENTS_FILE_NAME = \"movies_corpus.jsonl.gz\"\n",
-    "JUDGMENTS_FILE_NAME = \"movies_judgments.csv.gz\"\n",
-    "INDEX_SETTINGS_FILE_NAME = \"movies_index_settings.json\"\n",
-    "FEATURE_EXTRACTORS_FILE_NAME = \"movies_feature_extractors.json\"\n",
+    "# Delete index\n",
+    "print(\"Deleting index if it already exists:\", MOVIE_INDEX)\n",
+    "es_client.options(ignore_status=[400, 404]).indices.delete(index=MOVIE_INDEX)\n",
     "\n",
-    "if not os.path.exists(DATASET_DIR):\n",
-    "  print(f\"Creating non existing directory {DATASET_DIR} ...\" , end = '')\n",
-    "  os.makedirs(DATASET_DIR)\n",
-    "  print(\"[OK]\")\n",
+    "print(\"Creating index:\", MOVIE_INDEX)\n",
+    "index_settings = json.load(urlopen(INDEX_SETTINGS_URL))\n",
+    "es_client.indices.create(index=MOVIE_INDEX, **index_settings)\n",
     "\n",
-    "for current_file_name in [DOCUMENTS_FILE_NAME, JUDGMENTS_FILE_NAME, INDEX_SETTINGS_FILE_NAME, FEATURE_EXTRACTORS_FILE_NAME]:\n",
-    "  current_file_path = os.path.join(DATASET_DIR, current_file_name)\n",
-    "  if not os.path.isfile(current_file_path):\n",
-    "    current_file_url = urljoin(DATASET_BASE_URL, current_file_name)\n",
-    "    print(f\"Downloading {current_file_url} to {current_file_path} ...\" , end = '')\n",
-    "    urlretrieve(current_file_url, current_file_path)\n",
-    "    print(\"[OK]\")\n",
-    "  else:\n",
-    "    print(f\"Skip downloading {current_file_name} as it already exists into {DATASET_DIR}\")\n"
+    "print(f\"Loading the corpus from {CORPUS_URL}\")\n",
+    "corpus_df = pd.read_json(CORPUS_URL, lines=True)\n",
+    "\n",
+    "print(f\"Indexing the corpus into {MOVIE_INDEX} ...\")\n",
+    "bulk_result = es_helpers.bulk(\n",
+    "  es_client,\n",
+    "  actions=[{ \"_id\": movie['id'], \"_index\": MOVIE_INDEX, **movie } for movie in corpus_df.to_dict('records')]\n",
+    ")\n",
+    "print(f\"Indexed {bulk_result[0]} documents into {MOVIE_INDEX}\")"
    ]
   }
  ],
