Adding Question and answer example using Gemini, Elasticsearch and LangChain

--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -187,7 +187,7 @@
    "id": "dbdb2d55-3349-4e95-8087-68f927f0d864",
    "metadata": {},
    "source": [
-    "## Create a retriever using Chroma"
+    "## Create a retriever using Elasticsearch"
    ]
   },
   {
