Passing proper variable

--- a/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
+++ b/notebooks/integrations/gemini/vector-search-gemini-elastic.ipynb
@@ -158,7 +158,7 @@
     "q = \"How's weather in India?\"\n",
     "\n",
     "embedding = genai.embed_content(model=model,\n",
-    "                                content=sample_text,\n",
+    "                                content=q,\n",
     "                                task_type=\"retrieval_query\")\n",
     "\n",
     "resp = es.search(\n",
