removing typo related indexes

--- a/supporting-blog-content/Boston-Celtics-Demo/load_data_and_write_queries.ipynb
+++ b/supporting-blog-content/Boston-Celtics-Demo/load_data_and_write_queries.ipynb
@@ -1465,7 +1465,7 @@
     "    }\n",
     "}\n",
     "\n",
-    "games_won = es.count(index=\"celtics_current_season\", body=search_query)"
+    "games_won = es.count(index=\"boston_celtics_current_season\", body=search_query)"
    ]
   },
   {
@@ -1514,7 +1514,7 @@
    "outputs": [],
    "source": [
     "streak_search = es.search(\n",
-    "    index=\"celtics_current_season\",\n",
+    "    index=\"boston_celtics_current_season\",\n",
     "    body=streak_query)"
    ]
   },
