More notebooks added to nbtest

--- a/notebooks/langchain/langchain-using-own-model.ipynb
+++ b/notebooks/langchain/langchain-using-own-model.ipynb
@@ -26,21 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "langserve 0.0.21 requires pydantic<2,>=1, but you have pydantic 2.3.0 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m23.2\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m23.3.1\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpip install --upgrade pip\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!python3 -m pip install -qU langchain elasticsearch tiktoken  sentence-transformers eland  transformers\n",
     "\n",
@@ -78,9 +66,6 @@
     "\n",
     "# https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud#creating-an-api-key\n",
     "ELASTIC_API_KEY = getpass(\"Elastic Api Key: \")\n",
-    "\n",
-    "# https://platform.openai.com/api-keys\n",
-    "OPENAI_API_KEY = getpass(\"OpenAI API key: \")\n",
     "\n",
     "vector_store = ElasticsearchStore(\n",
     "    es_cloud_id=ELASTIC_CLOUD_ID, \n",
@@ -192,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -200,33 +185,7 @@
     "id": "xAkc1OVcOxy3",
     "outputId": "b2453634-89b8-48bc-ac65-a6a1c3b8170f"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating index approx-search-demo\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/_8/2nxt7jjx27bd8bm5lw63ht340000gn/T/ipykernel_32495/3913732881.py:37: DeprecationWarning: Passing transport options in the API method is deprecated. Use 'Elasticsearch.options()' instead.\n",
-      "  vector_store.client.indices.create(index=INDEX_NAME, mappings=INDEX_MAPPING, settings=INDEX_SETTINGS,\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'approx-search-demo'})"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# define index name\n",
     "INDEX_NAME=\"approx-search-demo\"\n",
@@ -260,10 +219,8 @@
     "# check if we want to delete index before creating the index\n",
     "if(SHOULD_DELETE_INDEX):\n",
     "  if vector_store.client.indices.exists(index=INDEX_NAME):\n",
-    "    print(\"Deleting existing %s\" % INDEX_NAME)\n",
     "    vector_store.client.indices.delete(index=INDEX_NAME, ignore=[400, 404])\n",
     "\n",
-    "print(\"Creating index %s\" % INDEX_NAME)\n",
     "vector_store.client.indices.create(index=INDEX_NAME, mappings=INDEX_MAPPING, settings=INDEX_SETTINGS,\n",
     "                  ignore=[400, 404])\n"
    ]
@@ -368,7 +325,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.4 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -382,9 +339,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.11.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
@@ -392,5 +348,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
