--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "* Elastic Credentials - Create an [Elastic Cloud deployment](https://www.elastic.co/search-labs/tutorials/install-elasticsearch/elastic-cloud) to get all Elastic credentials (`ELASTIC_CLOUD_ID`, `ELASTIC_API_KEY`).\n",
     "\n",
-    "* `GOOGLE_API_KEY` - To use the Gemini API, you need an API key. [Follow](https://ai.google.dev/tutorials/setup) to create a key with one click in Google AI Studio."
+    "* `GOOGLE_API_KEY` - To use the Gemini API, you need to [create an API key in Google AI Studio](https://ai.google.dev/tutorials/setup)."
    ]
   },
   {
