--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -55,22 +55,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import google.generativeai as genai\n",
-    "import google.ai.generativelanguage as glm\n",
-    "from elasticsearch import Elasticsearch, helpers\n",
-    "from langchain.vectorstores import ElasticsearchStore\n",
-    "from langchain.text_splitter import CharacterTextSplitter\n",
-    "from langchain_google_genai import GoogleGenerativeAIEmbeddings\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "import json\n",
+    "import os\n",
+    "from getpass import getpass\n",
+    "from urllib.request import urlopen\n",
+    "\n",
     "from langchain.prompts import ChatPromptTemplate\n",
-    "from langchain.prompts import PromptTemplate\n",
     "from langchain.schema.output_parser import StrOutputParser\n",
     "from langchain.schema.runnable import RunnablePassthrough\n",
-    "from langchain.schema.runnable import RunnableLambda\n",
-    "from langchain.schema import HumanMessage\n",
-    "from urllib.request import urlopen\n",
-    "from getpass import getpass\n",
-    "import json, os"
+    "from langchain.text_splitter import CharacterTextSplitter\n",
+    "from langchain.vectorstores import ElasticsearchStore\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
+    "from langchain_google_genai import GoogleGenerativeAIEmbeddings",
    ]
   },
   {
