--- a/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
+++ b/notebooks/integrations/gemini/qa-langchain-gemini-elasticsearch.ipynb
@@ -84,10 +84,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ[\"GOOGLE_API_KEY\"]=getpass(\"Google API Key :\")\n",
-    "ELASTIC_API_KEY=getpass(\"Elastic API Key :\")\n",
-    "ELASTIC_CLOUD_ID=getpass(\"Elastic Cloud ID :\")\n",
-    "elastic_index_name='gemini-qa'"
+    "os.environ[\"GOOGLE_API_KEY\"] = getpass(\"Google API Key :\")\n",
+    "ELASTIC_API_KEY = getpass(\"Elastic API Key :\")\n",
+    "ELASTIC_CLOUD_ID = getpass(\"Elastic Cloud ID :\")\n",
+    "elastic_index_name = \"gemini-qa\""
    ]
   },
   {
