remove paragraph I wanted to omit

--- a/notebooks/search/tokenization.ipynb
+++ b/notebooks/search/tokenization.ipynb
@@ -249,9 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we tokenize the long text, exclude the special tokens at beginning and end, create chunks of size 510 tokens and map the tokens back to texts.\n",
-    "\n",
-    "Side note: Be aware that tokenisation involves a normalisation step that strips away [nonspacing marks](https://www.fileformat.info/info/unicode/category/Mn/list.htm). If decoding is implemented as a reverse lookup from token IDs to vocabulary entries those stripped marks will not be recovered resulting in decoded text that could be slightly different to the original."
+    "Next we tokenize the long text, exclude the special tokens at beginning and end, create chunks of size 510 tokens and map the tokens back to texts."
    ]
   },
   {
