Increase request_timeout to avoid errors with a cold ML node

--- a/notebooks/langchain/langchain-vector-store-using-elser.ipynb
+++ b/notebooks/langchain/langchain-vector-store-using-elser.ipynb
@@ -156,8 +156,7 @@
     "    index_name=\"workplace_index\",\n",
     "    strategy=ElasticsearchStore.SparseVectorRetrievalStrategy(model_id=\".elser_model_2\"),\n",
     "    bulk_kwargs={\n",
-    "        \"chunk_size\": 5,\n",
-    "        \"max_chunk_bytes\": 100000000\n",
+    "        \"request_timeout\": 60,\n",
     "    }\n",
     ")"
    ]
