Add nbtest job to the GitHub Actions CI

--- a/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
+++ b/notebooks/integrations/hugging-face/loading-model-from-hugging-face.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "!python3 -m pip -qU install sentence-transformers eland elasticsearch transformers"
+    "!python3 -m pip install sentence-transformers eland elasticsearch transformers"
    ]
   },
   {
@@ -60,7 +60,8 @@
     "from elasticsearch import Elasticsearch\n",
     "from getpass import getpass\n",
     "from urllib.request import urlopen\n",
-    "import json"
+    "import json\n",
+    "from time import sleep"
    ]
   },
   {
@@ -111,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!eland_import_hub_model --cloud-id $ELASTIC_CLOUD_ID --hub-model-id sentence-transformers/all-MiniLM-L6-v2 --task-type text_embedding --es-api-key $ELASTIC_API_KEY --start"
+    "!eland_import_hub_model --cloud-id $ELASTIC_CLOUD_ID --hub-model-id sentence-transformers/all-MiniLM-L6-v2 --task-type text_embedding --es-api-key $ELASTIC_API_KEY --start --clear-previous"
    ]
   },
   {
@@ -301,7 +302,8 @@
     "for title in titles:\n",
     "    actions.append({\"index\": {\"_index\": \"blogs\"}})\n",
     "    actions.append(title)\n",
-    "es.bulk(index=\"blogs\", operations=actions)"
+    "es.bulk(index=\"blogs\", operations=actions)\n",
+    "sleep(5)"
    ]
   },
   {
@@ -423,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
